<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_on_boarding_scene"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_on_boarding"
        tools:layout_editor_absoluteY="438dp" />

    <TextView
        android:id="@+id/tv_onBoarding_1"
        style="@style/Text.Description3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="26dp"
        android:paddingTop="38dp"
        android:text="@string/OnBoarding_1"
        android:textColor="@color/color4"
        tools:layout_editor_absoluteY="514dp" />

    <TextView
        android:id="@+id/tv_onBoarding_2"
        style="@style/Text.Description3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="26dp"
        android:paddingTop="38dp"
        android:text="@string/OnBoarding_2"
        android:textColor="@color/color4"
        tools:layout_editor_absoluteY="514dp" />

    <ImageView
        android:id="@+id/img_onboarding_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cont_onboarding_1"
        app:srcCompat="@mipmap/ic_onboarding_1_foreground"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/ic_circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu4"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginEnd="32dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu3"
        app:layout_constraintTop_toTopOf="@+id/menu3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"/>

    <ImageView
        android:id="@+id/img_onboarding_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cont_onboarding_2"
        app:srcCompat="@mipmap/ic_onboarding_2_foreground"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="99dp" />

    <ImageView
        android:id="@+id/img_onboarding_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cont_onboarding_3"
        app:srcCompat="@mipmap/ic_onboarding_3_foreground"
        app:layout_constraintStart_toStartOf="@+id/img_onboarding_2"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/tv_onBoarding_3"
        style="@style/Text.Description3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="26dp"
        android:paddingTop="38dp"
        android:text="@string/OnBoarding_3"
        android:textColor="@color/color4"
        app:layout_constraintStart_toEndOf="@+id/tv_onBoarding_2"
        tools:layout_editor_absoluteY="514dp" />

    <ImageView
        android:id="@+id/img_onboarding_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cont_onboarding_4"
        app:srcCompat="@mipmap/ic_onboarding_4_foreground"
        app:layout_constraintStart_toStartOf="@+id/img_onboarding_3"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/tv_onBoarding_4"
        style="@style/Text.Description3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="26dp"
        android:paddingTop="38dp"
        android:text="@string/OnBoarding_4"
        android:textColor="@color/color4"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="514dp" />

    <TextView
        android:id="@+id/tv_next"
        style="@style/Text.Title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:alpha="0"
        android:text="NEXT"
        android:textColor="@color/color3"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="514dp" />


</androidx.constraintlayout.motion.widget.MotionLayout>