<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.community.EditCommunityActivity">

    <TextView
        android:id="@+id/btn_save"
        style="@style/Text.Description3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/simpan"
        app:layout_constraintBottom_toTopOf="@+id/civ_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:civ_border_color="@color/color2"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />


    <EditText
        android:id="@+id/edt_name"
        style="@style/Text.Description2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/profile_text_background"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:textColor="@color/color3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civ_profile"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edt_phoneNumber"
        style="@style/Text.Description2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/profile_text_background"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:textColor="@color/color3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name"
        android:hint="@string/no_hp" />

    <EditText
        android:id="@+id/edt_description"
        style="@style/Text.Description2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/profile_text_background"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minHeight="145dp"
        android:minLines="6"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:scrollbars="vertical"
        android:textColor="@color/color3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_phoneNumber"
        android:hint="@string/deskripsi_komunitas" />

    <EditText
        android:id="@+id/edt_ig"
        style="@style/Text.Description2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/profile_text_background"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:textColor="@color/color3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_description"
        android:hint="@string/masukan_instagram" />
    <EditText
        android:id="@+id/edt_fb"
        style="@style/Text.Description2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/profile_text_background"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:textColor="@color/color3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_ig"
        android:hint="@string/masukan_facebook" />

    <EditText
        android:id="@+id/edt_twitter"
        style="@style/Text.Description2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/profile_text_background"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:textColor="@color/color3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_fb"
        android:hint="@string/masukan_twitter" />

</androidx.constraintlayout.widget.ConstraintLayout>